--- a/clase19/css/styles.css
+++ b/clase19/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: cursive;
-  background-image: url('https://gastronomiaycia.republica.com/wp-content/photos/orig_ensala_quinoa_papaya4.jpg');
+  background-image: url('../ensalada-con-pepino.jpg');
   color: white;
   background-size: cover;
   background-position-y: -45px;
